--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,6 +1,5 @@
-@{
-    ViewData["Title"] = "Error";
-}
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div style="text-align: center;">
+    <h2>Some technical issues just happened.</h2>
+    <h2>We could not found the page you requested. Sorry =(</h2>
+    <h2>技術問題X.X</h2>
+</div>
