--- a/Views/Account/NoAccount.cshtml
+++ b/Views/Account/NoAccount.cshtml
@@ -9,8 +9,8 @@
     <title>登入異常</title>
 </head>
 <body>
-<div style="text-align: center;">
-    此帳號 @Model 並未在系統中註冊，請通知管理員😩
+<div style="text-align: center; margin-top: 30%;">
+    <h1>此帳號 @Model 並未在系統中註冊，請通知管理員😩</h1>
 </div>
 <script>
     setTimeout(function() {location.href='/account/login'}, 3000);
