--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-<div style="text-align: center;">
+<div style="text-align: center; margin-top: 30%;">
     <h2>Some technical issues just happened.</h2>
     <h2>We could not found the page you requested. Sorry =(</h2>
     <h2>技術問題X.X</h2>
